--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,6 @@
 body {
-    padding-top: 100px;
+    padding-top: 80px;
     font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
-}
-
-.icon-list {
-    padding: 0px 0 0 0;
-    text-align: center;
-}
-
-.icon-list li {
-    list-style-type: none;
-    display: inline-block;
-    position: relative;
-}
-
-.icon-list li img {
-    cursor: pointer;
 }
 
 .icon {
@@ -33,60 +18,12 @@ body {
     font-size: 16px;
 }
 
-.icon-evolve {
-    cursor: pointer;
-}
-
-.panel-heading {
-    cursor: pointer;
-}
-
-.status-label {
-    text-align: right;
-    padding-right: 25px;
-    width: 100px;
-    float: left;
-    font-weight: bold;
-}
-
-.evolve-label {
-    padding-right: 25px;
-    width: 125px;
-    float: left;
-    font-weight: bold;
-}
-
-.skill-label {
-    padding-right: 25px;
-    width: 150px;
-    float: left;
-    font-weight: bold;
-}
-
-.pager-fixed-top {
-    position: fixed;
+.textarea {
     width: 100%;
-    top: 50px;
-    z-index: 512;
-}
-
-.pager-fixed-top .pager {
-    margin: 10px 0;
-}
-
-.top-background {
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    height: 125px;
-    background: linear-gradient(180deg, white, white 75px, transparent 100px, transparent);
-    z-index: 3;
-}
-
-.row-top-buffer {
-    margin-top: 20px;
-}
-
-.noUi-connect {
-    background: #337ab7;
+    height: 100%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-width: 0px 1px 1px 1px;
+    box-shadow: none;
 }
